--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+  </head>
+  <body>
+    <header class="header">
+      <a href=""><div class="nav">WORK</div></a>
+      <a href=""><div class="nav">CONTACT</div></a>
+    </header>
+    <main class="main-box">
+      <section class="avtor-box">
+        <div>
+          <img src="./images/mine.jpeg" alt="" width="500px" />
+        </div>
+        <div class="title">
+          <div class="title-h1">Yuxi Lyu —</div>
+          <div class="title-h1">Designer</div>
+          <div class="title-h1">and Artist</div>
+          <p class="article">“Art is the object of feeling, and the subject of nature.”</p>
+          <p class="article">(S.K.langer, American philosopher and educator)</p>
+          <br />
+          <p class="article">Yuxi Lyu is a multidisciplinary designer and visual artist living in NYC. She received her MPS degree in communication design from the Parsons School of Design and BFA in fine art from the School of the Art Institute of Chicago. She is committed to creating avant-garde human-centered UX/UI design that positively affects society.</p>
+        </div>
+      </section>
+      <ul class="image-list">
+        <li class="image-list-li">
+          <a href="">
+            <img src="./images/01.png" alt="" class="small-image" />
+          </a>
+        </li>
+        <li class="image-list-li">
+          <a href="">
+            <img src="./images/01.png" alt="" class="small-image" />
+          </a>
+        </li>
+        <li class="image-list-li">
+          <a href="">
+            <img src="./images/01.png" alt="" class="small-image" />
+          </a>
+        </li>
+        <li class="image-list-li">
+          <a href="">
+            <img src="./images/01.png" alt="" class="small-image" />
+          </a>
+        </li>
+      </ul>
+    </main>
+  </body>
 </html>
