--- a/index.html
+++ b/index.html
@@ -9,47 +9,79 @@
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <header class="header">
-      <a href=""><div class="nav">WORK</div></a>
-      <a href=""><div class="nav">CONTACT</div></a>
-    </header>
-    <main class="main-box">
-      <section class="avtor-box">
-        <div>
-          <img src="./images/mine.jpeg" alt="" width="500px" />
+    <div class="first-page">
+      <header class="header">
+        <a href="./index.html"><div class="nav">WORK</div></a>
+        <a href="./pages/contact.html"><div class="nav">CONTACT</div></a>
+      </header>
+      <main class="main-box">
+        <section class="avtor-box">
+          <div>
+            <img src="./images/mine.jpeg" alt="" width="500px" />
+          </div>
+          <div class="title">
+            <div class="title-h1">Yuxi Lyu —</div>
+            <div class="title-h1">Designer</div>
+            <div class="title-h1">and Artist</div>
+            <p class="article">“Art is the object of feeling, and the subject of nature.”</p>
+            <p class="article">(S.K.langer, American philosopher and educator)</p>
+            <br />
+            <p class="article">Yuxi Lyu is a multidisciplinary designer and visual artist living in NYC. She received her MPS degree in communication design from the Parsons School of Design and BFA in fine art from the School of the Art Institute of Chicago. She is committed to creating avant-garde human-centered UX/UI design that positively affects society.</p>
+          </div>
+        </section>
+        <ul class="image-list">
+          <li class="image-list-li">
+            <a href="./pages/artsy.html">
+              <img src="./images/Artsy 图/上传图1.jpg" alt="" class="small-image" />
+            </a>
+          </li>
+          <li class="image-list-li">
+            <a href="./pages/Raise.html">
+              <img src="./images/Raise the red lantern/0B6A8724.jpg" alt="" class="small-image" />
+            </a>
+          </li>
+          <li class="image-list-li">
+            <a href="./pages/Tutor.html">
+              <img src="./images/Tutor orial/d41.png" alt="" class="small-image" />
+            </a>
+          </li>
+          <li class="image-list-li">
+            <a href="">
+              <img src="./images/GQ41.png" alt="" class="small-image" />
+            </a>
+          </li>
+        </ul>
+      </main>
+    </div>
+    <div class="second-page">
+        <div class="left">
+            <h1>01</h1>
+            <h3>Artwork Title</h3>
+            <h4>Type of Art</h4>
+            <a href="./pages/artsy.html"> <img src="./images/Artsy 图/上传图1.jpg" alt="" width="100%"></a>
         </div>
-        <div class="title">
-          <div class="title-h1">Yuxi Lyu —</div>
-          <div class="title-h1">Designer</div>
-          <div class="title-h1">and Artist</div>
-          <p class="article">“Art is the object of feeling, and the subject of nature.”</p>
-          <p class="article">(S.K.langer, American philosopher and educator)</p>
-          <br />
-          <p class="article">Yuxi Lyu is a multidisciplinary designer and visual artist living in NYC. She received her MPS degree in communication design from the Parsons School of Design and BFA in fine art from the School of the Art Institute of Chicago. She is committed to creating avant-garde human-centered UX/UI design that positively affects society.</p>
+        <div class="right">
+            <a href="./pages/contact.html" class="contact-button">CONTACT</a>
+            <h1>02</h1>
+            <h3>Artwork Title</h3>
+            <h4>Type of Art</h4>
+            <a href="./pages/Raise.html"> <img src=" ./images/Raise the red lantern/0B6A8724.jpg" alt="" width="100%"></a>
         </div>
-      </section>
-      <ul class="image-list">
-        <li class="image-list-li">
-          <a href="">
-            <img src="./images/01.png" alt="" class="small-image" />
-          </a>
-        </li>
-        <li class="image-list-li">
-          <a href="">
-            <img src="./images/01.png" alt="" class="small-image" />
-          </a>
-        </li>
-        <li class="image-list-li">
-          <a href="">
-            <img src="./images/01.png" alt="" class="small-image" />
-          </a>
-        </li>
-        <li class="image-list-li">
-          <a href="">
-            <img src="./images/01.png" alt="" class="small-image" />
-          </a>
-        </li>
-      </ul>
-    </main>
+    </div>
+    <div class="second-page">
+        <div class="left">
+            <h1>03</h1>
+            <h3>Artwork Title</h3>
+            <h4>Type of Art</h4>
+            <a href="./pages/Tutor.html"> <img src="./images/Tutor orial/d41.png" alt="" width="100%"></a>
+        </div>
+        <div class="right">
+            <a href="./pages/contact.html" class="contact-button">CONTACT</a>
+            <h1>04</h1>
+            <h3>Artwork Title</h3>
+            <h4>Type of Art</h4>
+            <a href=""> <img src="./images/GQ41.png" alt="" width="100%"></a>
+        </div>
+    </div>
   </body>
 </html>
