--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" /> -->
     <title>Document</title>
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/index.css" />
@@ -46,8 +47,8 @@
             </a>
           </li>
           <li class="image-list-li">
-            <a href="">
-              <img src="./images/GQ41.png" alt="" class="small-image" />
+            <a href="./pages/Grasping.html">
+              <img src="./images/Grasping Recollection/4444.JPG" alt="" class="small-image" />
             </a>
           </li>
         </ul>
@@ -76,11 +77,11 @@
             <a href="./pages/Tutor.html"> <img src="./images/Tutor orial/d41.png" alt="" width="100%"></a>
         </div>
         <div class="right">
-            <a href="./pages/contact.html" class="contact-button">CONTACT</a>
+            <a href="./pages/Grasping.html" class="contact-button">CONTACT</a>
             <h1>04</h1>
             <h3>Artwork Title</h3>
             <h4>Type of Art</h4>
-            <a href=""> <img src="./images/GQ41.png" alt="" width="100%"></a>
+            <a href="./pages/Grasping.html"> <img src="./images/Grasping Recollection/4444.JPG" alt="" width="100%"></a>
         </div>
     </div>
   </body>
