--- a/pages/Raise.html
+++ b/pages/Raise.html
@@ -23,7 +23,7 @@
         text-align: center;
       }
       body {
-        padding: 0 100px;
+        padding:0 5%;
       }
 
       /* image2-box */
