--- a/pages/Tutor.html
+++ b/pages/Tutor.html
@@ -24,7 +24,7 @@
             text-align: center;
         }
         body{
-            padding:0 100px
+            padding:0 5%;
         }
     </style>
 </head>
