--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </li>
           <li class="image-list-li">
             <a href="./pages/Raise.html">
-              <img src="./images/Raise the red lantern/0B6A8724.jpg" alt="" class="small-image" />
+              <img src="./images/Raise/0B6A8724.jpg" alt="" class="small-image" />
             </a>
           </li>
           <li class="image-list-li">
@@ -48,7 +48,7 @@
           </li>
           <li class="image-list-li">
             <a href="./pages/Grasping.html">
-              <img src="./images/Grasping Recollection/4444.JPG" alt="" class="small-image" />
+              <img src="./images/GraspingRecollection/4444.JPG" alt="" class="small-image" />
             </a>
           </li>
         </ul>
@@ -66,7 +66,7 @@
             <h1>02</h1>
             <h3>Artwork Title</h3>
             <h4>Type of Art</h4>
-            <a href="./pages/Raise.html"> <img src=" ./images/Raise the red lantern/0B6A8724.jpg" alt="" width="100%"></a>
+            <a href="./pages/Raise.html"> <img src=" ./images/Raise/0B6A8724.jpg" alt="" width="100%"></a>
         </div>
     </div>
     <div class="second-page">
@@ -81,7 +81,7 @@
             <h1>04</h1>
             <h3>Artwork Title</h3>
             <h4>Type of Art</h4>
-            <a href="./pages/Grasping.html"> <img src="./images/Grasping Recollection/4444.JPG" alt="" width="100%"></a>
+            <a href="./pages/Grasping.html"> <img src="./images/GraspingRecollection/4444.JPG" alt="" width="100%"></a>
         </div>
     </div>
   </body>
