--- a/pages/Grasping.html
+++ b/pages/Grasping.html
@@ -42,7 +42,7 @@
     </style>
 </head>
 <body>
-    <img src="../images/Grasping Recollection/4444.JPG" alt="" width="100%">
+    <img src="../images/GraspingRecollection/4444.JPG" alt="" width="100%">
     <h3>Grasping Recollection</h3>
     <div>Exhibition indentity</div>
     <div>Poster design</div>
@@ -51,27 +51,27 @@
     <p>This is a project about the School of Art Institute of Chicago's 2020 exhibition. This senior exhibition brings together the freelance work of students from all disciplines and includes four key projects: posters, brochures, business cards, and web pages. The poster uses a combination of fluorescent yellow and gray to make the message and images stand out visually. I divided the posters into two sides to maintain enough information for use in the exhibition. Next, I outlined each artwork and filled it with fluorescent yellow to create a sense of mystery to the viewer. A unified frame structure and visual elements were used to maintain harmony throughout the branding project.</p>
     <br>
     <div class="image-box">
-        <img src="../images/Grasping Recollection/111.png" alt="" width="48%">
-        <img src="../images/Grasping Recollection/222.png" alt="" width="48%">
+        <img src="../images/GraspingRecollection/111.png" alt="" width="48%">
+        <img src="../images/GraspingRecollection/222.png" alt="" width="48%">
     </div>
     <h2>Modular system</h2>
     <div class="image-box">
-        <img src="../images/Grasping Recollection/8.15branding海报.jpg" alt="" width="48%">
-        <img src="../images/Grasping Recollection/444.jpg" alt="" width="48%">
+        <img src="../images/GraspingRecollection/8.15branding海报.jpg" alt="" width="48%">
+        <img src="../images/GraspingRecollection/444.jpg" alt="" width="48%">
     </div>
     <div class="image-box">
-        <img src="../images/Grasping Recollection/555.jpg" alt="" width="48%">
-        <img src="../images/Grasping Recollection/666.jpg" alt="" width="48%">
+        <img src="../images/GraspingRecollection/555.jpg" alt="" width="48%">
+        <img src="../images/GraspingRecollection/666.jpg" alt="" width="48%">
     </div>
     <h2>Poster Design</h2>
     <br>
     <div class="image-box swap">
-        <img src="../images/Grasping Recollection/1.png" alt="" width="30%">
-        <img src="../images/Grasping Recollection/2.png" alt="" width="30%">
-        <img src="../images/Grasping Recollection/3.png" alt="" width="30%">
-        <img src="../images/Grasping Recollection/4.png" alt="" width="30%">
-        <img src="../images/Grasping Recollection/5.png" alt="" width="30%">
-        <img src="../images/Grasping Recollection/6.png" alt="" width="30%">
+        <img src="../images/GraspingRecollection/1.png" alt="" width="30%">
+        <img src="../images/GraspingRecollection/2.png" alt="" width="30%">
+        <img src="../images/GraspingRecollection/3.png" alt="" width="30%">
+        <img src="../images/GraspingRecollection/4.png" alt="" width="30%">
+        <img src="../images/GraspingRecollection/5.png" alt="" width="30%">
+        <img src="../images/GraspingRecollection/6.png" alt="" width="30%">
     </div>
     <h2>Website design</h2>
     <br>
