--- a/pages/Raise.html
+++ b/pages/Raise.html
@@ -38,7 +38,7 @@
     </style>
   </head>
   <body>
-    <img src="../images/Raise the red lantern/0B6A8724.jpg" alt="" width="100%" />
+    <img src="../images/Raise/0B6A8724.jpg" alt="" width="100%" />
     <br />
     <h3>Raise The Red Lantern</h3>
     <p>Video installation</p>
@@ -55,10 +55,10 @@
     </p>
     <h2>Publication digital printing</h2>
     <div class="image2-box">
-        <img  class="image2-box-item" src="../images//Raise the red lantern/09122020184144-0004.jpg" alt="" width="100%">
+        <img  class="image2-box-item" src="../images/Raise/09122020184144-0004.jpg" alt="" width="100%">
         <div class="image2-box-item">
-            <img src="../images/Raise the red lantern/0B6A8835.jpg" alt="" width="60%">
-            <img src="../images/Raise the red lantern/0B6A8786.jpg" alt="" width="60%">
+            <img src="../images/Raise/0B6A8835.jpg" alt="" width="60%">
+            <img src="../images/Raise/0B6A8786.jpg" alt="" width="60%">
         </div>
     </div>
     <div>
@@ -67,49 +67,49 @@
     <br>
     <ul class="image-box">
       <li class="image-box-li">
-        <img src="../images/Raise the red lantern/09122020184144-0006.jpg" alt="" width="100%" />
+        <img src="../images/Raise/09122020184144-0006.jpg" alt="" width="100%" />
       </li>
       <li class="image-box-li">
-        <img src="../images/Raise the red lantern/09122020184144-0007.jpg" alt="" width="100%" />
+        <img src="../images/Raise/09122020184144-0007.jpg" alt="" width="100%" />
       </li>
       <li class="image-box-li">
-        <img src="../images/Raise the red lantern/09122020184144-0008.jpg" alt="" width="100%" />
+        <img src="../images/Raise/09122020184144-0008.jpg" alt="" width="100%" />
       </li>
       <li class="image-box-li">
-        <img src="../images/Raise the red lantern/09122020184144-0014.jpg" alt="" width="100%" />
+        <img src="../images/Raise/09122020184144-0014.jpg" alt="" width="100%" />
       </li>
       <li class="image-box-li">
-        <img src="../images/Raise the red lantern/09122020184144-0015.jpg" alt="" width="100%" />
+        <img src="../images/Raise/09122020184144-0015.jpg" alt="" width="100%" />
       </li>
       <li class="image-box-li">
-        <img src="../images/Raise the red lantern/09122020184144-0016.jpg" alt="" width="100%" />
+        <img src="../images/Raise/09122020184144-0016.jpg" alt="" width="100%" />
       </li>
       <li class="image-box-li">
-        <img src="../images/Raise the red lantern/09122020184144-0009.jpg" alt="" width="100%" />
+        <img src="../images/Raise/09122020184144-0009.jpg" alt="" width="100%" />
       </li>
       <li class="image-box-li">
-        <img src="../images/Raise the red lantern/09122020184144-0010.jpg" alt="" width="100%" />
+        <img src="../images/Raise/09122020184144-0010.jpg" alt="" width="100%" />
       </li>
       <li class="image-box-li">
-        <img src="../images/Raise the red lantern/09122020184144-0011.jpg" alt="" width="100%" />
+        <img src="../images/Raise/09122020184144-0011.jpg" alt="" width="100%" />
       </li>
 
       <li class="image-box-li">
-        <img src="../images/Raise the red lantern/09122020184144-0018.jpg" alt="" width="100%" />
+        <img src="../images/Raise/09122020184144-0018.jpg" alt="" width="100%" />
       </li>
       <li class="image-box-li">
-        <img src="../images/Raise the red lantern/09122020184144-0019.jpg" alt="" width="100%" />
+        <img src="../images/Raise/09122020184144-0019.jpg" alt="" width="100%" />
       </li>
       <li class="image-box-li">
-        <img src="../images/Raise the red lantern/09122020184144-0020.jpg" alt="" width="100%" />
+        <img src="../images/Raise/09122020184144-0020.jpg" alt="" width="100%" />
       </li>
     </ul>
     <h2>Video installation</h2>
     <div class="image2-box">
-        <img  class="image2-box-item" src="../images//Raise the red lantern/0B6A8340.jpg" alt="" width="100%">
+        <img  class="image2-box-item" src="../images/Raise/0B6A8340.jpg" alt="" width="100%">
         <div class="image2-box-item">
-            <img src="../images/Raise the red lantern/0B6A8453.jpg" alt="" width="60%">
-            <img src="../images/Raise the red lantern/0B6A8445.jpg" alt="" width="60%">
+            <img src="../images/Raise/0B6A8453.jpg" alt="" width="60%">
+            <img src="../images/Raise/0B6A8445.jpg" alt="" width="60%">
         </div>
     </div>
     <!-- <h2>
@@ -124,10 +124,10 @@
     </h2>
     <ul>
         <li>
-            <img src="../images/Raise the red lantern/123456789.jpg" alt="" width="100%">
+            <img src="../images/Raise/123456789.jpg" alt="" width="100%">
         </li>
         <li>
-            <img src="../images/Raise the red lantern/Screen Shot 2022-03-27 at 9.57.07 PM.png" alt="" width="100%">
+            <img src="../images/Raise/Screen Shot 2022-03-27 at 9.57.07 PM.png" alt="" width="100%">
         </li>
     </ul>
   </body>
