--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport"content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">	 -->
+
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" /> -->
     <title>Document</title>
     <link rel="stylesheet" href="./css/common.css" />
@@ -13,19 +14,20 @@
     <div class="first-page">
       <header class="header">
         <a href="./index.html"><div class="nav">WORK</div></a>
-        <a href="./pages/contact.html"><div class="nav">CONTACT</div></a>
+        <a href="./pages/contact.html"><div class="nav">CONTACT</div> </a>
       </header>
       <main class="main-box">
         <section class="avtor-box">
           <div>
-            <img src="./images/mine.jpeg" alt="" width="500px" />
+            <img src="./images/new.jpg" alt="" width="500px" />
           </div>
           <div class="title">
             <div class="title-h1">Yuxi Lyu —</div>
             <div class="title-h1">Designer</div>
             <div class="title-h1">and Artist</div>
-            <p class="article">“Art is the object of feeling, and the subject of nature.”</p>
-            <p class="article">(S.K.langer, American philosopher and educator)</p>
+            <br class="article">“Art is the object of feeling, and the subject of nature.” </br>
+            (S.K.langer, American philosopher and educator)
+          </p>
             <br />
             <p class="article">Yuxi Lyu is a multidisciplinary designer and visual artist living in NYC. She received her MPS degree in communication design from the Parsons School of Design and BFA in fine art from the School of the Art Institute of Chicago. She is committed to creating avant-garde human-centered UX/UI design that positively affects society.</p>
           </div>
@@ -33,7 +35,7 @@
         <ul class="image-list">
           <li class="image-list-li">
             <a href="./pages/artsy.html">
-              <img src="./images/Artsy 图/上传图1.jpg" alt="" class="small-image" />
+              <img src="./images/Artsy/上传图1.jpg" alt="" class="small-image" />
             </a>
           </li>
           <li class="image-list-li">
@@ -53,34 +55,39 @@
           </li>
         </ul>
       </main>
+      <div class="scroll">Scroll to discover!</div>
     </div>
     <div class="second-page">
         <div class="left">
             <h1>01</h1>
-            <h3>Artwork Title</h3>
-            <h4>Type of Art</h4>
-            <a href="./pages/artsy.html"> <img src="./images/Artsy 图/上传图1.jpg" alt="" width="100%"></a>
+            <h3>Artsy New Feature</h3>
+            <h4>Mobile • UX/UI Design</h4>
+            <a href="./pages/artsy.html"> <img src="./images/Artsy/上传图1.jpg" alt="" width="100%"></a>
         </div>
         <div class="right">
             <a href="./pages/contact.html" class="contact-button">CONTACT</a>
             <h1>02</h1>
-            <h3>Artwork Title</h3>
-            <h4>Type of Art</h4>
+            <h3>Raise The Red Lantern</h3>
+            <h4>Video installation
+              Publication
+              Poster</h4>
             <a href="./pages/Raise.html"> <img src=" ./images/Raise/0B6A8724.jpg" alt="" width="100%"></a>
         </div>
     </div>
     <div class="second-page">
         <div class="left">
             <h1>03</h1>
-            <h3>Artwork Title</h3>
-            <h4>Type of Art</h4>
+            <h3>Tutor Orial</h3>
+            <h4>Desktop • UX/UI Design</h4>
             <a href="./pages/Tutor.html"> <img src="./images/Tutor orial/d41.png" alt="" width="100%"></a>
         </div>
         <div class="right">
-            <a href="./pages/Grasping.html" class="contact-button">CONTACT</a>
+            <a href="./pages/contact.html" class="contact-button">CONTACT</a>
             <h1>04</h1>
-            <h3>Artwork Title</h3>
-            <h4>Type of Art</h4>
+            <h3>Grasping Recollection</h3>
+            <h4>Exhibition indentity
+              Poster design
+              Website design</h4>
             <a href="./pages/Grasping.html"> <img src="./images/GraspingRecollection/4444.JPG" alt="" width="100%"></a>
         </div>
     </div>
