--- a/pages/Raise.html
+++ b/pages/Raise.html
@@ -35,15 +35,18 @@
           width: 50%;
           text-align: center;
       }
+      body{
+        font-size: 1.6rem;
+      }
     </style>
   </head>
   <body>
     <img src="../images/Raise/0B6A8724.jpg" alt="" width="100%" />
     <br />
     <h3>Raise The Red Lantern</h3>
-    <p>Video installation</p>
-    <p>Publication</p>
-    <p>Poster</p>
+    <div>Video installation</div>
+    <div>Publication</div>
+    <div>Poster</div>
     <br />
     <p>
       After watching the movie "Raise The Red Lantern", adapted from Su Tong's novel, it ignited the feminist consciousness. The film is about a murder case that arises from a dispute over love and power between the master's three wives after a college girl marries into the Chen house as a concubine. The master will light a lantern in front of the house of any wife that pleases him, and once the wives violate the house rules, the master will extinguish her lantern. The temptation to light the
