--- a/pages/artsy.html
+++ b/pages/artsy.html
@@ -25,94 +25,112 @@
         body{
             padding:100px
         }
+        h2{
+            padding:0;
+            margin: 0;
+        }
+
     </style>
 </head>
 <body>
-    <img src="../images/Artsy 图/上传图1.jpg" alt="" width="100%">
+    <img src="../images/Artsy/上传图1.jpg" alt="" width="100%">
     <h3>Artsy New Feature</h3>
-    <h6>Mobile • UX/UI Design</h6>
+    <div>Mobile • UX/UI Design</div>
     <br>
     <h2>App Introduction</h2>
-    <p>In this project, we selected the Artsy app for analysis and improvement. Artsy is the largest online art marketplace with more than 1 million artworks by over one hundred thousand artists. It collects art from galleries around the world, allows users to bid in live auctions from anywhere, and allows artists to sell works.</p>
-
+    <div>In this project, we selected the Artsy app for analysis and improvement. Artsy is the largest online art marketplace with more than 1 million artworks by over one hundred thousand artists. It collects art from galleries around the world, allows users to bid in live auctions from anywhere, and allows artists to sell works.</div>
+<br>
     <h2>Goal</h2>
-    <p>The ultimate goal was all to serve the purpose of building trust.</p>
+    <div>The ultimate goal was all to serve the purpose of building trust.</div>
 
     <br>
     <br>
     <h2>Page & Function</h2>
     <ul class="image-box">
         <li class="image-box-li">
-            <img src="../images/Artsy 图/3.png" alt="" width="100%">
-            <div class="image-title">artwork            </div>
+            <img src="../images/Artsy/3.png" alt="" width="100%">
+            <div class="image-title">Artworks           </div>
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/6.png" alt="" width="100%">
-            <div class="image-title"> art description & artist voice</div>
+            <img src="../images/Artsy/6.png" alt="" width="100%">
+            <div class="image-title">
+                Art description & Artist voice <br>
+Certificate & Awards<br>
+Bidding time statues<br>
+bidding history<br>
+            </div>
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/7.png" alt="" width="100%">
-            <div class="image-title">transparent bidding time & idding history</div>
+            <img src="../images/Artsy/7.png" alt="" width="100%">
+            <div class="image-title">
+                Transparent Bidding history <br>
+(Block chain)
+            </div>
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/8.png" alt="" width="100%">
-            <div class="image-title">overview</div>
+            <img src="../images/Artsy/8.png" alt="" width="100%">
+            <div class="image-title">
+                Overview <br>
+Interview & Timeline <br>
+Contact form
+            </div>
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/2.png" alt="" width="100%">
-            <div class="image-title">articles</div>
+            <img src="../images/Artsy/2.png" alt="" width="100%">
+            <div class="image-title">Articles</div>
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/1.png" alt="" width="100%">
-            <div class="image-title">external link to articles</div>
+            <img src="../images/Artsy/1.png" alt="" width="100%">
+            <div class="image-title">External link to articles</div>
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/Frame 238.png" alt="" width="80%">
-            <div class="image-title">external link to video</div>
+            <img src="../images/Artsy/111.png" alt="" width="80%">
+            <div class="image-title">External link to video</div>
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/Frame 240.png" alt="" width="80%">
-            <div class="image-title">event</div>
+            <img src="../images/Artsy/222.png" alt="" width="80%">
+            <div class="image-title">Event detail  <br>
+                Register</div>
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/Contact.png" alt="" width="80%">
-            <div class="image-title">contact</div>
+            <img src="../images/Artsy/333.png" alt="" width="80%">
+            <div class="image-title">Contact form</div>
         </li>
     </ul>
     <h2>Dynamic display</h2>
-    <img src="../images/Artsy 图/上传图2.jpg" alt="" width="30%">
+    <img src="../images/Artsy/上传图2.jpg" alt="" width="30%">
     <br>
     <h2>Research</h2>
     <ul class="image-box">
         <li class="image-box-li">
-            <img src="../images/Artsy 图/Frame 40.jpg" alt="" width="100%">
+            <img src="../images/Artsy/Frame 40.jpg" alt="" width="100%">
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/Frame 41.jpg" alt="" width="100%">
+            <img src="../images/Artsy/Frame 41.jpg" alt="" width="100%">
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/Frame 42.jpg" alt="" width="100%">
+            <img src="../images/Artsy/Frame 42.jpg" alt="" width="100%">
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/Frame 43.jpg" alt="" width="100%">
+            <img src="../images/Artsy/Frame 43.jpg" alt="" width="100%">
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/Frame 44.jpg" alt="" width="100%">
+            <img src="../images/Artsy/Frame 44.jpg" alt="" width="100%">
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/Frame 45.jpg" alt="" width="100%">
+            <img src="../images/Artsy/Frame 45.jpg" alt="" width="100%">
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/Frame 46.jpg" alt="" width="100%">
+            <img src="../images/Artsy/Frame 46.jpg" alt="" width="100%">
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/Frame 47.jpg" alt="" width="100%">
+            <img src="../images/Artsy/Frame 47.jpg" alt="" width="100%">
         </li>
         <li class="image-box-li">
-            <img src="../images/Artsy 图/Frame 48.jpg" alt="" width="100%">
+            <img src="../images/Artsy/Frame 48.jpg" alt="" width="100%">
         </li>
     </ul>
     <h2>Branding</h2>
-    <img src="../images/Artsy 图/Frame 55.jpg" alt="" width="40%">
+    <img src="../images/Artsy/Frame 55.jpg" alt="" width="40%">
 </body>
 </html>
