--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,38 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/common.css" />
     <title>Document</title>
     <style>
-        body{
-            padding:60px;
-        }
-        .title{
-            font-size: 26px;
-        }
-        h1{
-            font-size: 40px;
-        }
+      body {
+        padding: 60px;
+        font-size: 20px;
+        font-family: Wremena, Icons;
+      }
+      .title {
+        font-size: 26px;
+        margin:0;
+      }
+      h2 {
+        font-family: Wremena, Icons;
+        font-style: normal;
+        font-weight: 200;
+        padding: 0;
+        margin: 0;
+        color: rgba(0, 0, 0, 0.85);
+        font-size: 6.2rem;
+        line-height: 0.9;
+      }
+      .jianli {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+      }
+      .my-box {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+      }
+      .indent {
+        text-indent: 80px;
+      }
     </style>
-</head>
-<body>
-    <h1>Yuxi Lyu —</h1>
-    <h1>Designer and Artist</h1>
-    <br>
+  </head>
+  <body>
+    <h2>
+      <b>Yuxi Lyu</b>
+      —
+      <br />
+      Designer and Artist
+      <br />
+    </h2>
+    <br />
+    <br />
+    <br />
     <p class="title">
-        <b>Email:</b>lyuy768@newschool.edu
+      <b>Email:</b>
+      lyuy768@newschool.edu
     </p>
     <p class="title">
-        <b>Mobile:</b>9293706757
+      <b>Mobile:</b>
+      9293706757
     </p>
     <p>
-        Yuxi Lyu is a multidisciplinary designer and visual artist living in NYC. She received her MPS degree in communication design from the Parsons School of Design and BFA in fine art from the School of the Art Institute of Chicago. She is committed to creating avant-garde human-centered UX/UI design that positively affects society.
+      “Art is the object of feeling, and the subject of nature.”
+      <br />
+      (S.K.langer, American philosopher and educator)
     </p>
 
-    <div>
-        <img src="../images/contact.jpg" alt="">
+    <p class="indent"><b>Yuxi Lyu is a multidisciplinary designer and visual artist living in NYC. She received her MPS degree in communication design from the Parsons School of Design and BFA in fine art from the School of the Art Institute of Chicago. She is committed to creating avant-garde human-centered UX/UI design that positively affects society.</b></p>
+
+    <div class="jianli">
+      <img src="../images/contact.jpg" alt="" />
     </div>
-</body>
+    <br />
+
+    She loves to create human-centered UX/UI designs that bring positive effects, providing teams with diverse inspiration and strategic solutions based on her interdisciplinary background. She focuses on communication and empathy and believes in the power of design and art to make life better.
+    <br />
+    <br />
+    <br />
+
+    She is a recipient of the dean's scholarship for undergraduate majors in fine art and graduate students in communication design. In addition, her work was selected for the exhibition A City To Wear 3.0, organized by The Research House for Asian for Asian Art in Chicago, and her UX/UI work was evaluated as constructive and creative design.
+    <br />
+    <br />
+    She also enjoys drawing and painting and small animals in her free time.
+    <br />
+    <br />
+    <br />
+    <hr />
+    <div class="my-box">
+      <div class="left">
+        <p>Yuxi’s professional side</p>
+        <img src="../images/IMG_7126.jpeg" alt="" width="600px" height="680px" />
+      </div>
+      <div class="left">
+        <p>Yuxi’s professional side</p>
+        <img src="../images/WechatIMG2.jpeg" alt="" width="600px" height="680px" />
+      </div>
+    </div>
+  </body>
 </html>
