--- a/pages/Grasping.html
+++ b/pages/Grasping.html
@@ -1,79 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/common.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/common.css" />
     <title>Document</title>
     <style>
-        .image-list{
-            width: 100%;
-            display: flex;
-            flex-wrap: wrap;
-        }
-        .image-li{
-          width: 50%;
-          /* display: flex;
+      .image-list {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+      }
+      .image-li {
+        width: 50%;
+        /* display: flex;
           flex-direction: column;
           align-items: center; */
-        }
-        .image-title{
-            width: 100%;
-            padding:10px 0;
-            text-align: center;
-        }
-        body{
-            padding:0 5%;
-            box-sizing: border-box;
-        }
-        .image-box{
-            display: flex;
-            width: 100%;
-            justify-content: space-between;
-            margin-bottom: 20px;
-        }
-        .swap{
-            flex-wrap: wrap;
-        }
-        .swap img{
-            margin-bottom: 20px;
-        }
+      }
+      .image-title {
+        width: 100%;
+        padding: 10px 0;
+        text-align: center;
+      }
+      body {
+        padding: 0 5%;
+        box-sizing: border-box;
+      }
+      .image-box {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        margin-bottom: 20px;
+      }
+      .swap {
+        flex-wrap: wrap;
+      }
+      .swap img {
+        margin-bottom: 20px;
+      }
+      h3,
+      h2 {
+        padding: 0;
+        margin: 0;
+      }
+      h2 {
+        margin-top: 1rem;
+        margin-bottom: 0.5rem;
+        font-size: 12px;
+        font-weight: 400;
+        color: rgba(0, 0, 0, 0.4);
+        font-family: 'Helvetica Neue', Helvetica, sans-serif, 'Helvetica Roman', Icons;
+        font-style: normal;
+        line-height: 1.3;
+      }
     </style>
-</head>
-<body>
-    <img src="../images/GraspingRecollection/4444.JPG" alt="" width="100%">
+  </head>
+  <body>
+    <img src="../images/GraspingRecollection/4444.JPG" alt="" width="100%" />
     <h3>Grasping Recollection</h3>
     <div>Exhibition indentity</div>
     <div>Poster design</div>
     <div>Website design</div>
-    <br>
-    <p>This is a project about the School of Art Institute of Chicago's 2020 exhibition. This senior exhibition brings together the freelance work of students from all disciplines and includes four key projects: posters, brochures, business cards, and web pages. The poster uses a combination of fluorescent yellow and gray to make the message and images stand out visually. I divided the posters into two sides to maintain enough information for use in the exhibition. Next, I outlined each artwork and filled it with fluorescent yellow to create a sense of mystery to the viewer. A unified frame structure and visual elements were used to maintain harmony throughout the branding project.</p>
-    <br>
+    <br />
+    <p>
+      This is a project about the School of Art Institute of Chicago's 2020 exhibition. This senior exhibition brings together the freelance work of students from all disciplines and includes four key projects: posters, brochures, business cards, and web pages. The poster uses a combination of fluorescent yellow and gray to make the message and images stand out visually. I divided the posters into two sides to maintain enough information for use in the exhibition. Next, I outlined each artwork
+      and filled it with fluorescent yellow to create a sense of mystery to the viewer. A unified frame structure and visual elements were used to maintain harmony throughout the branding project.
+    </p>
+    <br />
     <div class="image-box">
-        <img src="../images/GraspingRecollection/111.png" alt="" width="48%">
-        <img src="../images/GraspingRecollection/222.png" alt="" width="48%">
+      <img src="../images/GraspingRecollection/111.png" alt="" width="48%" />
+      <img src="../images/GraspingRecollection/222.png" alt="" width="48%" />
     </div>
     <h2>Modular system</h2>
     <div class="image-box">
-        <img src="../images/GraspingRecollection/8.15branding海报.jpg" alt="" width="48%">
-        <img src="../images/GraspingRecollection/444.jpg" alt="" width="48%">
+      <img src="../images/GraspingRecollection/8.15branding海报.jpg" alt="" width="48%" />
+      <img src="../images/GraspingRecollection/444.jpg" alt="" width="48%" />
     </div>
     <div class="image-box">
-        <img src="../images/GraspingRecollection/555.jpg" alt="" width="48%">
-        <img src="../images/GraspingRecollection/666.jpg" alt="" width="48%">
+      <img src="../images/GraspingRecollection/555.jpg" alt="" width="48%" />
+      <img src="../images/GraspingRecollection/666.jpg" alt="" width="48%" />
     </div>
     <h2>Poster Design</h2>
-    <br>
+    <br />
     <div class="image-box swap">
-        <img src="../images/GraspingRecollection/1.png" alt="" width="30%">
-        <img src="../images/GraspingRecollection/2.png" alt="" width="30%">
-        <img src="../images/GraspingRecollection/3.png" alt="" width="30%">
-        <img src="../images/GraspingRecollection/4.png" alt="" width="30%">
-        <img src="../images/GraspingRecollection/5.png" alt="" width="30%">
-        <img src="../images/GraspingRecollection/6.png" alt="" width="30%">
+      <img src="../images/GraspingRecollection/1.png" alt="" width="30%" />
+      <img src="../images/GraspingRecollection/2.png" alt="" width="30%" />
+      <img src="../images/GraspingRecollection/3.png" alt="" width="30%" />
+      <img src="../images/GraspingRecollection/4.png" alt="" width="30%" />
+      <img src="../images/GraspingRecollection/5.png" alt="" width="30%" />
+      <img src="../images/GraspingRecollection/6.png" alt="" width="30%" />
     </div>
     <h2>Website design</h2>
-    <br>
-</body>
+    <br />
+  </body>
 </html>
