--- a/pages/Tutor.html
+++ b/pages/Tutor.html
@@ -1,75 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/common.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/common.css" />
     <title>Document</title>
     <style>
-        .image-list{
-            width: 100%;
-            display: flex;
-            flex-wrap: wrap;
-        }
-        .image-li{
-          width: 50%;
-          /* display: flex;
+      .image-list {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+      }
+      .image-li {
+        width: 48%;
+        padding:0 10px;
+        /* display: flex;
           flex-direction: column;
           align-items: center; */
-        }
-        .image-title{
-            width: 100%;
-            padding:10px 0;
-            text-align: center;
-        }
-        body{
-            padding:0 5%;
-        }
+      }
+      .image-title {
+        width: 100%;
+        padding: 10px 0;
+        text-align: left;
+        margin-top: 1rem;
+        margin-bottom: 0.5rem;
+        font-size: 16px;
+        font-weight: 400;
+        color: rgba(0, 0, 0, 0.4);
+        font-family: 'Helvetica Neue', Helvetica, sans-serif, 'Helvetica Roman', Icons;
+        font-style: normal;
+        line-height: 1.3;
+      }
+      body {
+        padding: 0 5%;
+      }
+      h3,
+      h2,
+      p {
+        padding: 0;
+        margin: 0;
+      }
     </style>
-</head>
-<body>
-    <img src="../images/Tutor orial/41.png" alt="" width="100%">
+  </head>
+  <body>
+    <img src="../images/Tutor orial/41.png" alt="" width="100%" />
+    <br />
+    <br />
     <h3>Tutor Orial</h3>
-    <h6>Desktop • UX/UI Design</h6>
-    <br>
+    <div>Desktop • UX/UI Design</div>
+    <br />
     <h2>Project Introduction</h2>
-    <p>This research project is about an online tutor teaching website for my class at The New School. We analyzed and improved on the original error cases and redesigned it with a clear flow and functionality. This website is a professional platform that offers students of all levels of education the freedom to choose online courses. </p>
+    <p>This research project is about an online tutor teaching website for my class at The New School. We analyzed and improved on the original error cases and redesigned it with a clear flow and functionality. This website is a professional platform that offers students of all levels of education the freedom to choose online courses.</p>
+    <br>
+    <br>
     <ul class="image-list">
-        <li class="image-li">
-            <img src="../images/Tutor orial/O7BGQ41.png" alt="" width="100%">
-            <div class="image-title">Login page</div>
-        </li>
-        <li class="image-li">
-            <img src="../images/Tutor orial/O7BQ41.png" alt="" width="100%">
-            <div class="image-title">Select classes</div>
-        </li>
-        <li class="image-li">
-            <img src="../images/Tutor orial/O7B41.png" alt="" width="100%">
-            <div class="image-title">Recommended tutor</div>
-        </li>
-        <li class="image-li">
-            <img src="../images/Tutor orial/34.png" alt="" width="100%">
-            <div class="image-title">Tutor details</div>
-        </li>
-        <li class="image-li">
-            <img src="../images/Tutor orial/BGQ41.png" alt="" width="100%">
-            <div class="image-title">Shopping cart</div>
-        </li>
-        <li class="image-li">
-            <img src="../images/Tutor orial/O741.png" alt="" width="100%">
-            <div class="image-title">Payment</div>
-        </li>
-        <li class="image-li">
-            <img src="../images/Tutor orial/jj.png" alt="" width="100%">
-            <div class="image-title">Confirmation</div>
-        </li>
-        <li class="image-li">
-            <img src="../images/Tutor orial/41.png" alt="" width="100%">
-            <div class="image-title">My account</div>
-        </li>
+      <li class="image-li">
+        <img src="../images/Tutor orial/O7BGQ41.png" alt="" width="100%" />
+        <div class="image-title">Login page</div>
+      </li>
+      <li class="image-li">
+        <img src="../images/Tutor orial/O7BQ41.png" alt="" width="100%" />
+        <div class="image-title">Select classes</div>
+      </li>
+      <li class="image-li">
+        <img src="../images/Tutor orial/O7B41.png" alt="" width="100%" />
+        <div class="image-title">Recommended tutor</div>
+      </li>
+      <li class="image-li">
+        <img src="../images/Tutor orial/34.png" alt="" width="100%" />
+        <div class="image-title">Tutor details</div>
+      </li>
+      <li class="image-li">
+        <img src="../images/Tutor orial/BGQ41.png" alt="" width="100%" />
+        <div class="image-title">Shopping cart</div>
+      </li>
+      <li class="image-li">
+        <img src="../images/Tutor orial/O741.png" alt="" width="100%" />
+        <div class="image-title">Payment</div>
+      </li>
+      <li class="image-li">
+        <img src="../images/Tutor orial/jj.png" alt="" width="100%" />
+        <div class="image-title">Confirmation</div>
+      </li>
+      <li class="image-li">
+        <img src="../images/Tutor orial/41.png" alt="" width="100%" />
+        <div class="image-title">My account</div>
+      </li>
     </ul>
-    <br>
-    <br>
-</body>
+    <br />
+    <br />
+  </body>
 </html>
