--- a/pages/Raise.html
+++ b/pages/Raise.html
@@ -36,7 +36,7 @@
           text-align: center;
       }
       body{
-        font-size: 1.6rem;
+        /* font-size: 1.6rem; */
       }
     </style>
   </head>
